--- a/styling.css
+++ b/styling.css
@@ -7,11 +7,11 @@ html{
 }
 #container{
     height: 613px;
-    width: 690px;
+    width: 850px;
     background-color: #9DD2EA;
     margin: 10px auto;
     padding: 30px;
-    border-radius: 20px;
+    border-radius: 10px;
     box-shadow: 0px 5px 3px 0px #009DE4;
     -webkit-box-shadow: 0px 5px 3px 0px #009DE4;
     -moz-box-shadow: 0px 5px 3px 0px #009DE4;
@@ -25,7 +25,7 @@ html{
     box-shadow: 0px 4px #9DA853;
     -webkit-box-shadow: 0px 4px #9DA853;
     -moz-box-shadow: 0px 4px #9DA853;
-    left: 670px;
+    left: 810px;
 }
 #correct{
     position: absolute;
@@ -44,7 +44,7 @@ html{
     display: none;
 }
 #question{
-    width: 630px;
+    width: 750px;
     height: 430px;
     background-color: white;
     margin: 50px auto 10px auto;
@@ -90,6 +90,20 @@ html{
     -moz-transition: all 0.2s;
     -ms-transition: all 0.2s;
 }
+
+#trialsLeft{
+    width: 100px;
+    padding: 22px;
+    position: absolute;
+    top: 27px;
+    left: 20px;
+    background-color: #F1FF92;
+/*    border-radius: 10px;*/
+    box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+/*    display: none;*/
+}
 #gameOver{
     width: 500px;
     height: 200px;
@@ -100,11 +114,11 @@ html{
     color: white;
     position: absolute;
     top: 190px;
-    left: 125px;
+    left: 199px;
     font-size: 2.4em;
     text-align: center;
 /*    border-radius: 10px;*/
-    display: none;
+/*    display: none;*/
     text-transform: uppercase;
     z-index: 2;
     
