--- a/styling.css
+++ b/styling.css
@@ -102,7 +102,7 @@ html{
     box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
-/*    display: none;*/
+    display: none;
 }
 #gameOver{
     width: 500px;
@@ -118,7 +118,7 @@ html{
     font-size: 2.4em;
     text-align: center;
 /*    border-radius: 10px;*/
-/*    display: none;*/
+    display: none;
     text-transform: uppercase;
     z-index: 2;
     
