--- a/styling.css
+++ b/styling.css
@@ -27,6 +27,7 @@ html{
     -moz-box-shadow: 0px 4px #9DA853;
     left: 810px;
 }
+/*
 #correct{
     position: absolute;
     background-color: #42e252;
@@ -43,6 +44,7 @@ html{
     padding: 10px;
     display: none;
 }
+*/
 #question{
     width: 750px;
     height: 430px;
