--- a/styling.css
+++ b/styling.css
@@ -95,16 +95,23 @@ html{
 
 #trialsLeft{
     width: 100px;
-    padding: 22px;
+    padding: 10px;
     position: absolute;
+/*
     top: 27px;
     left: 20px;
+*/
     background-color: #F1FF92;
 /*    border-radius: 10px;*/
     box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
     display: none;
+}
+.life{
+    width: 17px;
+    height: 17px;
+    margin: 0px 8px;
 }
 #gameOver{
     width: 500px;
