--- a/styling.css
+++ b/styling.css
@@ -45,7 +45,7 @@ html{
     display: none;
 }
 */
-#question{
+#fruitContainer{
     width: 750px;
     height: 430px;
     background-color: white;
