--- a/styling.css
+++ b/styling.css
@@ -58,6 +58,8 @@ html{
     font-family: cursive , sans-serif;
     font-size: 130px;
     color: black;
+    position: relative;
+    overflow: hidden;
 }
 #instruction{
     width: 430px;
@@ -115,6 +117,7 @@ html{
 }
 .fruit{
     display: none;
+    position: absolute;
 }
 #gameOver{
     width: 500px;
